# client-mexc-exchange

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
MexcClient/: __init__.py  client.py  main.py
MexcClient/Enums/: __init__.py  enums.py
MexcClient/Utils/Signature/: __init__.py  signature.py  test_signature.py
client/: main.py
tests/: test_MexcClient.py
