[tool.poetry]
name = "MexcApiClient"
version = "0.1.3"
description = ""
authors = ["Carlos Eduardo <suportebeloj@gmail.com>"]
packages = [
    { include = "MexcClient"},
    { include = "MexcClient/**/*.py"}
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/suportebeloj/client-mexc-exchange"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
